# skill_recommender

./: .gitignore  Dockerfile  README.md  demo.py  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: vacancy_ingestion.py
skill_reco/: .user.yml  dbt_project.yml  profiles.yml  skill_reco.duckdb.wal
skill_reco/macros/: create_s3_secret.sql
skill_reco/models/: sources.yml
skill_reco/models/gold/: skill_by_employeer.sql  skill_by_experience.sql  skill_combinations.sql  skill_frequency.sql
skill_reco/models/silver/: _hh_vacancies.yml  hh_vacancies.sql  vacancy_skills.py
skill_reco/seeds/: skills.csv
src/: demo.py  recommender.py
src/extract/: hh_vacancies.py
src/load/: bronze_vacancies.py
src/storage/: s3_client.py
