[project]
name = "skill-reco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.2",
    "boto3>=1.43.20",
    "curl-cffi>=0.15.0",
    "dbt-core>=1.11.11",
    "dbt-duckdb>=1.10.1",
    "deltalake>=1.6.0",
    "dotenv>=0.9.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "s3fs>=0.4.2",
    "tenacity>=9.1.4",
]
